Fixes #2 and generaly improves display on mobile

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,14 @@
+.search-type-card-xs {
+  width: 100%;
+}
+
 .search-input-card {
   width: 90%;
+}
+
+.search-input-card-xs {
+  width: 100%;
+  padding: 16px 8px;
 }
 
 .search-input-item {
@@ -32,12 +41,25 @@
   min-width: 80%;
 }
 
+.results-container-xs {
+  margin: 12px 2px;
+  width: 100%;
+}
+
 .mat-table {
   overflow: auto;
 }
 
+.mat-column-dpsPlus {
+  flex: 0 0 40px;
+}
+
 .attribution-card {
   width: 90%;
+}
+
+.attribution-card-xs {
+
 }
 
 .attribution-text {
